--- a/package.json
+++ b/package.json
@@ -3,24 +3,35 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --port 3001",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "server": "node server.js",
+    "dev": "npm-run-all --parallel start server"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "~9.0.6",
+    "@angular/cdk": "^9.2.1",
     "@angular/common": "~9.0.6",
     "@angular/compiler": "~9.0.6",
     "@angular/core": "~9.0.6",
     "@angular/forms": "~9.0.6",
+    "@angular/material": "^9.2.1",
     "@angular/platform-browser": "~9.0.6",
     "@angular/platform-browser-dynamic": "~9.0.6",
     "@angular/router": "~9.0.6",
+    "colours": "^0.6.0-2",
+    "fingerprintjs2": "^2.1.0",
+    "mime": "^2.4.4",
+    "minimist": "^1.2.5",
+    "node-static": "^0.7.11",
+    "optimist": "^0.6.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
+    "wordwrap": "^1.0.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
@@ -28,9 +39,9 @@
     "@angular/cli": "~9.0.6",
     "@angular/compiler-cli": "~9.0.6",
     "@angular/language-service": "~9.0.6",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.12.37",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
