--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/common": "~9.0.6",
     "@angular/compiler": "~9.0.6",
     "@angular/core": "~9.0.6",
+    "@angular/fire": "^5.1.1",
     "@angular/forms": "~9.0.6",
     "@angular/material": "^9.2.1",
     "@angular/platform-browser": "~9.0.6",
@@ -25,8 +26,10 @@
     "@angular/router": "~9.0.6",
     "colours": "^0.6.0-2",
     "fingerprintjs2": "^2.1.0",
+    "firebase": "^7.14.2",
     "mime": "^2.4.4",
     "minimist": "^1.2.5",
+    "ng-yandex-metrika": "^3.0.2",
     "node-static": "^0.7.11",
     "optimist": "^0.6.1",
     "rxjs": "~6.5.4",
